--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,7 @@ dependencies:
   provider: ^6.0.0
   path_provider: ^2.0.9
   json_annotation: ^4.4.0
-
-  
+  debounce_throttle: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
