--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
   assets:
     - assets/lessonPdfs/
     - assets/
+    - assets/welcomePictures/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
