--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   debounce_throttle: ^2.0.0
   flutter_svg: ^1.0.3
   bottom_navy_bar: ^6.0.0
+  scrollable_positioned_list: ^0.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -77,9 +78,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/lessonPdfs/
     - assets/
+    - assets/lessonPdfs/
     - assets/welcomePictures/
+    - assets/trophyImages/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
