--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   scrollable_positioned_list: ^0.2.3
   pin_code_text_field: ^1.8.0
+  timeline_tile: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
