broke up learning, finalized. precached welcome page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,7 +81,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/lessonPdfs/
+    - assets/lessonPdfs/module1/
+    - assets/lessonPdfs/module2/
+    - assets/lessonPdfs/module3/
     - assets/welcomePictures/
     - assets/trophyImages/
   #   - images/a_dot_burr.jpeg
